fix: Ajuste de erros após PRs, envolvendo Agendamento